--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "servidor.js",
   "dependencies": {
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "fs": "0.0.1-security"
   },
   "devDependencies": {},
